# oop_additional_tasks

./: pyproject.toml
alternative_task/src/: task.py  task_iterrator.py  user.py  utils.py
alternative_task/test/: conftest.py  test_task.py  test_user.py
lesson1/: albums.py  number.py  students.py
lesson2/: bankaccount.py  person.py  rectangle.py  user.py
lesson3/: counter.py  fraction.py  logger.py  mylist.py  mylist2.py  point.py  timer.py
