[project]
name = "oop-additional-tasks"
version = "0.1.0"
description = ""
authors = [
    {name = "Dr.T.",email = "Aohudyakov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.tests.dependencies]
pytest = "^8.3.5"

